...
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="@dimen/imageWidth"
            android:layout_height="@dimen/imageWidth"
            android:scaleType="fitXY"
            app:imageUrl="@{viewModel.imageUrl.getValue()}" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textMargin"
            android:gravity="center_horizontal"
            android:text="@{viewModel.username.getValue()}"
            android:textColor="@color/black"
...
